src/App.css
@import url(https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic);

*,
*::before,
*::after{
  box-sizing: border-box;
}

body {
  color: aliceblue;
  background: rgb(2,0,36);
background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba(2,0,5,1) 100%);
}

.logo {
  width: 4rem;
}
.card {
  background-color: rgb(181, 228, 152);
  align-content: center;
  text-align: center;
  border-radius: 1rem;
  margin: .5rem;
}
.card-body {
  border-radius: 1rem;
  background: linear-gradient(90deg, rgba(205, 251, 146, 0.764) 0%, rgba(178, 175, 91, 0.345) 39%, rgb(228, 173, 97) 100%);
}
.bubbleAttack {
  border-radius: 1rem;
  max-width: max-content;
}
.navbar {
  border-radius: 1rem;
  background: rgba(30, 157, 171, 0.241);
  font-size: 1.2rem;
  box-shadow: .5em .5em 1em rgba(0, 0, 0, 0.351);
}
.nav-item {
  padding: 1rem;
  font-size: 1.3rem;
}

.btn {
  font-size: .7rem;
}

.cool-phrase {
  font-size: 2rem;
  font-family: Lato;
}

